--- a/main.css
+++ b/main.css
@@ -315,7 +315,7 @@ section h2 {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin: auto;
   max-height: 700px;
-  z-index: 2
+  z-index: 2;
 }
 
 
@@ -335,8 +335,8 @@ section h2 {
   color: #FFFFFF;
   font-size: 1.2rem;
   line-height: 1.6;
-  width: 85%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 90%;
 }
 
 .project-entry img {
