--- a/main.css
+++ b/main.css
@@ -307,7 +307,7 @@ section h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 95%;
+  width: 98%;
   background-color: #000000; /* Solid color without transparency */
   border-radius: 10px;
   border: 2px solid #39FF14;
@@ -376,7 +376,8 @@ section h2 {
   display: grid;
   grid-template-columns: repeat(2, 0.5fr);
   grid-template-rows: repeat(2, 0.5fr);
-  row-gap: 5%;
+  row-gap: 4%;
+  column-gap: 3%;
   padding: 0;
   width: 80%;
 }
